--- a/index.html
+++ b/index.html
@@ -1,96 +1,144 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infotech Wizard Frontend Assignment (Responsive)</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Using a standard modern font, adjust if the Figma file specifies a different font -->
-</head>
-<body>
-
-    <!-- -------NAvbar--------- -->
-    <!-- Hidden Checkbox for Mobile Menu (The JS-free Hack) -->
-    <input type="checkbox" id="menu-toggle" class="menu-toggle">
-
-    <header>
-        <div class="container nav-container">
-            <!-- Logo Section -->
-            <div class="logo-section">
-                <img src="img/logo.svg" alt="">
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="styleguide.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="project">
+      <div class="hero-section">
+        <div class="div">
+          <div class="frame">
+            <img class="group" src="img/lining.svg" />
+            <p class="your-resume-deserves">
+              <span class="text-wrapper">Your Resume </span>
+              <span class="span">Deserves A Yes</span>
+              <span class="text-wrapper-2"> Let’s Make It Happen</span>
+            </p>
+            <p class="if-your-resume-isn-t">
+              If Your Resume Isn’t Getting Responses, It’s Time For An Upgrade.
+              Get An Ats-optimized Resume Crafted By Hr Experts To Help You Land
+              More Interviews. Our Resumes Are Designed To Get Your Foot In The
+              Door And Place Your Name At The Top Of The Shortlist.
+            </p>
+            <div class="frame-2">
+              <div class="buttons">
+                <div class="contact">RESUME PAKAGES</div>
+              </div>
+              <button class="contact-wrapper">
+                <div class="contact-2">CONTACT US</div>
+              </button>
             </div>
-
-            <!-- Hamburger Icon (Label for Checkbox) -->
-            <label for="menu-toggle" class="hamburger-icon">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M4 6H20M4 12H20M4 18H20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </label>
-
-            <!-- Navigation Links -->
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Our Services</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">FAQ</a></li>
-                </ul>
-            </nav>
-            <div>
-                <a href="#" class="btn-quote">Get A Quote</a>
+          </div>
+          <div class="women-svg">
+            <div class="group-2">
+              <img class="ellipse" src="img/Group 3.svg" />
+              <img
+                class="portrait-happy-young"
+                src="img/portrait-happy-young-woman-standing-with-backpack-holding-books-mobile-phone-isolated-white-wall-removebg-preview 1.svg"
+              />
             </div>
+            <img class="frame-3" src="img/Frame 23.svg" />
+            <img class="frame-4" src="img/Frame 239.svg" />
+          </div>
         </div>
-    </header>
-    <!-- ----------Hero Section----------- -->
-    <section class="hero-section">
-        <div class="content-wrapper">
-            <div class="sideA">
-                <!-- <img src="lining.svg" alt="" class="underline"> -->
-                <h1>Your Resume <br> <span class="highlight-text">Deserves A Yes  
-                <img src="img/lining.svg" alt="" class="underline-svg-img">
-                </span> Let’s <br> Make It Happen</h1>
-                <p style="margin-top: 30px;width:76%">If your resume isn’t getting responses, it’s time for an upgrade.Get an ATS-optimized resume crafted by HR experts to help you land more interviews. Our resumes are designed to get your foot in the door and place your name at the top of the shortlist.</p>
-                <div class="cta-buttons" style="margin-top: 20px;">
-                    <a href="#" class="btn primary-btn">RESUME PACKAGES</a>
-                    <a href="#" class="btn secondary-btn">CONTACT US</a>
+        <div class="frame-wrapper">
+          <div class="frame-5">
+            <div class="group-3"><img src="img/logo.svg" alt="" /></div>
+            <div class="frame-2">
+              <div class="frame-6">
+                <div class="div-wrapper">
+                  <div class="text-wrapper-3 text">Home</div>
                 </div>
+              </div>
+              <div class="frame-6">
+                <div class="div-wrapper"><div class="home text">About Us</div></div>
+              </div>
+              <div class="frame-6">
+                <div class="div-wrapper">
+                  <div class="home text">Our Services</div>
+                </div>
+              </div>
+              <div class="frame-6">
+                <div class="div-wrapper"><div class="home-2 text">Pricing</div></div>
+              </div>
+              <div class="frame-6">
+                <div class="div-wrapper"><div class="home-2 text">Faq</div></div>
+              </div>
             </div>
-            <div class="sideB">
-                <img src="img/IMAGE1.svg" alt="Student smiling and holding books">
+            <div class="frame-2">
+              <div class="buttons-2">
+                <div class="contact-2">Get A Quote</div>
+              </div>
             </div>
+          </div>
         </div>
-    </section>
-    <!-- Box Section -->
-     <section>
-        <div class="box-section">
-            <div class="btn-wrapper">
-                <button class="btn-box">What You Get</button>
-                <h2>You’re Not just another applicant and your resume shouldn’t look like one</h2>
+      </div>
+      <div class="frame-7">
+        <!-- <div class="group-4"></div> -->
+        <div class="frame-8">
+          <div class="frame-9">
+            <div class="frame-10">
+              <div class="what-you-get-wrapper">
+                <img class="what-you-get" src="img/What you Get.svg" />
+              </div>
             </div>
-            <div class="box">
-                <div class="box1">
-                    <img src="img/vector1.svg" alt="" class="vector-img">
-                    <h3>A Resume That Passes ATS Filters</h3>
-                    <p>Get a professionally written, keyword-optimized resume that lands in recruiter inboxes—not rejection piles.</p>
-                </div>
-                <div class="box1">
-                    <img src="img/vector2.svg" alt="" class="vector-img">
-                    <h3>A Cover Letter That Gets Read</h3>
-                    <p>Stand out with a cover letter that speaks directly to the role and reflects your strengths.</p>
-                </div>
-                <div class="box1">
-                    <img src="img/vector3.svg" alt="" class="vector-img">
-                    <h3>A LinkedIn Profile That Works For You</h3>
-                    <p>Attract the right eyes, start conversations, and show up in recruiter searches.</p>
-                </div>
-                <div class="box1">
-                    <img src="img/vector4.svg" alt="" class="vector-img">
-                    <h3>Interview Confidence</h3>
-                    <p>Interview preperation with real HR professionals so you speak clearly,confidently, and convincingly.</p>
-                </div>
+            <div class="frame-10">
+              <p class="you-re-not-just">
+                You’re Not Just Another Applicant And your Resume shouldn’t Look
+                Like One
+              </p>
             </div>
+          </div>
+          <div class="frame-11">
+            <div class="frame-12">
+              <div class="frame-13">
+                <img class="vector" src="img/vector1.svg" />
+                <p class="p">A Resume That Passes ATS Filters</p>
+              </div>
+              <p class="text-wrapper-4">
+                Get a professionally written, keyword-optimized resume that
+                lands in recruiter inboxes—not rejection piles.
+              </p>
+            </div>
+            <div class="frame-12">
+              <div class="frame-13">
+                <img class="vector" src="img/vector2.svg" />
+                <p class="p">A Cover Letter That Gets Read</p>
+              </div>
+              <p class="text-wrapper-4">
+                Stand out with a cover letter that speaks directly to the role
+                and reflects your strengths.
+              </p>
+            </div>
+            <div class="frame-12">
+              <div class="frame-13">
+                <img class="vector" src="img/vector3.svg" />
+                <p class="p">A LinkedIn Profile That Works For You</p>
+              </div>
+              <p class="text-wrapper-4">
+                Attract the right eyes, start conversations, and show up in
+                recruiter searches.
+              </p>
+            </div>
+            <div class="frame-12">
+              <div class="frame-13">
+                <img class="vector" src="img/vector4.svg" />
+                <div class="frame-14">
+                  <div class="text-wrapper-5">Interview Confidence</div>
+                </div>
+              </div>
+              <p class="text-wrapper-4">
+                Interview preperation with real HR professionals so you speak
+                clearly,confidently, and convincingly.
+              </p>
+            </div>
+          </div>
         </div>
-     </section>
-</body>
+      </div>
+    </div>
+  </body>
 </html>
